--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,23 @@
 {
   "development": {
     "username": "postgres",
-    "password": "123456",
+    "password": "kadatahu",
     "database": "db_ch6",
-    "host": "127.0.0.1",
+    "host": "localhost",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": "123456",
+    "password": "kadatahu",
     "database": "db_ch6",
-    "host": "127.0.0.1",
+    "host": "localhost",
     "dialect": "postgres"
   },
   "production": {
     "username": "postgres",
-    "password": "123456",
+    "password": "kadatahu",
     "database": "db_ch6",
-    "host": "127.0.0.1",
+    "host": "localhost",
     "dialect": "postgres"
   }
 }
